--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://github.com/Viko1/book_store",
   "name": "book_store",
   "version": "0.1.0",
   "private": true,
@@ -30,6 +29,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "gh-pages": "^2.2.0",
@@ -42,6 +43,7 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path": "^0.12.7",
     "pnp-webpack-plugin": "1.6.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -73,9 +75,7 @@
     "yarn": "^1.22.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "node scripts/start.js",
+    "start": "node server.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
