--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dev-utils": "^10.2.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
