--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "yarn": "^1.22.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "start2": "node scripts/start.js",
+    "start2": "node server.js",
+    "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
