--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.9.0",
+    "node": "^14.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "path": "^0.12.13",
+    "path": "^0.12.07",
     "pnp-webpack-plugin": "1.6.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
